--- a/basico/trabalhando com array/exercicio/index.html
+++ b/basico/trabalhando com array/exercicio/index.html
@@ -15,10 +15,12 @@
             <p>Sobrenome: <input type="text" class="sobrenome"></p>
             <p>Peso: <input type="text" class="peso"></p>
             <p>Altura: <input type="text" class="altura"></p>
-            <button type="submit">Enviar formulario</button>
+            <button type="submit">Enviar</button>
+
+            <p class="resultado"></p>
         </form>
     </main>
     
-    <script src=""></script>
+    <script src="js/resposta.js "></script>
 </body>
 </html>
