--- a/basico/trabalhando com array/exercicio/index.html
+++ b/basico/trabalhando com array/exercicio/index.html
@@ -15,7 +15,7 @@
             <p>Sobrenome: <input type="text" class="sobrenome"></p>
             <p>Peso: <input type="text" class="peso"></p>
             <p>Altura: <input type="text" class="altura"></p>
-            <button type="submit">Enviar</button>
+            <button type="submit">Enviar formulario</button>
 
             <p class="resultado"></p>
         </form>
