--- a/básico/trabalhando com array/desafio/index.html
+++ b/básico/trabalhando com array/desafio/index.html
@@ -9,6 +9,9 @@
 <body>
     <section><p>Formulario</p></section>
 
+    <!-- Fazer um código aonde ele mostra o Nome, Sobrenome, Peso e Altura da pessoa quando ele preencher e enviar um formulario
+        Obs:. a mensagem não pode ser apagada, pule um espaço e coloque a proxima-->
+
     <main>
         <form action="" method="get" class="form">
             <p>Nome: <input type="text" class="nome"></p>
