--- a/básico/documento HTML/index.html
+++ b/básico/documento HTML/index.html
@@ -19,7 +19,7 @@
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge"> <!-- Esta meta é exclusiva para Internet Explorer, ela pode configurar a página para ser renderizada como em outra versão do Internet Explorer -->
     
-    <link rel="stylesheet" href="style.css"> <!-- aqui estou importando um arquivo css-->
+    <link rel="stylesheet" href="arquivo.css"> <!-- aqui estou importando um arquivo css-->
     
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- controlar as dimensões e o dimensionamento da página em outras palavras isso e praticamente para tornar os elementosresponsivos -->
 
@@ -45,6 +45,6 @@
         </div>
     </footer>
 
-    <script></script> <!-- depois um script, mas claro que tera essas tags somente se voce for usar elas, caso contrario não tera-->
+    <script src="js/script.js"></script> <!-- depois um script, mas claro que tera essas tags somente se voce for usar elas, caso contrario não tera-->
 </body>
 </html>
