exercicio novo + anotações extras for, documento HTML

--- a/lógica de programação/operadores de repetição/exercicio 2/index.html
+++ b/lógica de programação/operadores de repetição/exercicio 2/index.html
@@ -9,6 +9,13 @@
 </head>
 <body>
     <main class="container">
+        <div class="paragrafos">
+            <p> Lorem ipsum dolor, </p>
+            <p> sit amet consectetur adipisicing elit. Expedita, </p>
+            <p> sint! Aperiam asperiores dicta, dolor quisquam labore </p>
+            <p> inventore voluptatum aut dolore debitis facilis sunt? Quis </p>
+            <p> fugiat culpa sequi sapiente ipsa dolorum </p>
+        </div>
     </main>
 
     <script src="resposta.js"></script>
