--- a/básico/documento HTML/index.html
+++ b/básico/documento HTML/index.html
@@ -37,6 +37,9 @@
 
     <main> <!-- seguido de um main -->
         <div class="corpo">
+            <form action="" method="get">
+                <button class="botao" type="submit">botao</button>
+            </form>
         </div>
     </main>
 
