--- a/JS/lógica de programação/operadores lógicos/exercicios/exercicio.html
+++ b/JS/lógica de programação/operadores lógicos/exercicios/exercicio.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-    <link rel="stylesheet" href="../../../modelo/assets/css/style.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/modelo/assets/css/style.css">
     <title>Calcular IMC</title>
 </head>
 <body>
